update demo notebook

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -222,9 +222,11 @@
    "name": "idl"
   },
   "language_info": {
-   "name": "IDL"
-  },
-  "signature": "sha256:4793f093de8df0f1f6f9373ab7bc2888ed079687c055bf94e13787b588261172"
+   "codemirror_mode": "idl",
+   "file_extension": ".pro",
+   "mimetype": "text/x-idl",
+   "name": "idl"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 0
